objects/Approver_Matrix__c.object
<CustomObject>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Web,</fullName>
                </value>
                <value>
                    <fullName>Phone Enquiry,</fullName>
                </value>
                <value>
                    <fullName>Partner Referral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approver_Matrices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Existing Customer – Downgrade</fullName>
                </value>
                <value>
                    <fullName>Existing Customer – Replacement,</fullName>
                </value>
                <value>
                    <fullName>Existing Customer – Upgrade,</fullName>
                </value>
                <value>
                    <fullName>New Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Approver Matrix</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Approver Matrix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approver Matrices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>